# keyboard-firmware

./: .gitignore  LICENSE  README.md  colors-gen.py  flake.nix  openocd.cfg
.github/workflows/: build.yml
debug/: result
examples/: backlight.json  layout.json
gui/: CMakeLists.txt  Main.qml  main.cpp
src/: CMakeLists.txt  leds.c  main.c  usb_descriptors.c
src/include/: leds.h  tusb_config.h
